# fonk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/fonk/: __main__.py  cli.py  cli_parser.py  config.py  errors.py  locator.py  render.py  runner.py  session.py
